# bedplot

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  tools.sh
accounts/: forms.py
adr/: svg_rendering.md
bedplot/: asgi.py  settings.py  urls.py  wsgi.py
bedplot/accounts/: apps.py  models.py
bedplot/beds/: admin.py  apps.py  draw.py  models.py  test_beds.py  urls.py  views.py
bedplot/beds/management/commands/: bedgroup.py
bedplot/beds/migrations/: 0001_initial.py  0002_bed_length_bed_width_alter_planting_plant_spacing_and_more.py  0002_bed_origin_x_bed_origin_y.py  0003_rename_bed_row_planting_row_alias.py  0003_rename_plot_field_alter_bed_length_alter_bed_width.py  0004_alter_planting_sown_date_and_more.py  0004_rename_location.py  0005_alter_planting_sown_date_and_more.py  0005_relate_bed_group_to_field.py  0006_alter_planting_user.py  0006_rename_x_y_fields.py  0007_rename_bedgroup_field.py  0008_cascade_bg_delete.py
bedplot/beds/templates/: __base.html
bedplot/beds/templates/beds/: bed_detail.html  bed_list.html  bed_svg.html  field_detail.html  field_svg.html
bedplot/beds/templatetags/: bed_tags.py
bedplot/pages/: apps.py
static/css/: base.css
staticfiles/: staticfiles.json
templates/: base.html
templates/account/: password_change.html  password_reset.html  password_set.html
templates/pages/: home.html
